# snippets

./: README.md
Telegram_Bots/message-scheduler/: .env_example  .gitignore  LICENSE  pyproject.toml  readme.md
Telegram_Bots/message-scheduler/bot/: database.py  main.py
